--- a/css/novedades-blog.css
+++ b/css/novedades-blog.css
@@ -61,7 +61,7 @@ hr.small {
 }
 @media only screen and (min-width: 768px) {
 .intro-header .site-heading h1, .intro-header .page-heading h1 {
-    font-size: 70px;
+    font-size: 50px;
 }
 .intro-header .post-heading h1 {
   font-size: 35px;
@@ -81,17 +81,17 @@ hr.small {
   font-family: 'Lora', 'Times New Roman', serif;
   font-style: italic;
   font-weight: 300;
-  font-size: 20px;
+  font-size: 16px;
 }
 .intro-header .post-heading .meta a {
   color: white;
 }
 @media only screen and (min-width: 768px) {
   .intro-header .post-heading h1 {
-    font-size: 55px;
+      font-size: 32px;
   }
   .intro-header .post-heading .subheading {
-    font-size: 30px;
+    font-size: 24px;
   }
 }
 .post-preview > a {
@@ -103,7 +103,7 @@ hr.small {
   color: #0085A1;
 }
 .post-preview > a > .post-title {
-  font-size: 24px;
+  font-size:20px;
   margin-top: 30px;
   margin-bottom: 10px;
 }
@@ -115,7 +115,7 @@ hr.small {
 }
 .post-preview > .post-meta {
   color: #777777;
-  font-size: 18px;
+  font-size: 14px;
   font-style: italic;
   margin-top: 0;
 }
@@ -128,13 +128,13 @@ hr.small {
   color: #0085A1;
   text-decoration: underline;
 }
-@media only screen and (min-width: 768px) {
-  .post-preview > a > .post-title {
-    font-size: 24px;
+
+ h2.post-title, h3.post-subtitle {
+    font-size: 20px !important;
   }
-}
+
 .section-heading {
-  font-size: 36px;
+  font-size: 28px;
   margin-top: 60px;
   font-weight: 700;
 }
