--- a/css/estilos.css
+++ b/css/estilos.css
@@ -926,7 +926,7 @@ span#text-lost-msg {
     font-size: 16px;
     padding: 20px 15px 5px;
     text-align: center;
-    min-height: 170px;
+    /* min-height: 170px; */
     font-family: 'Open Sans';
 }
 
@@ -934,7 +934,7 @@ span#text-lost-msg {
     font-size: 14px;
     padding: 20px 15px 5px;
     text-align: center;
-    min-height: 170px;
+    /* min-height: 170px; */
     font-family: 'Open Sans';
     font-weight: 600;
 }
@@ -1179,8 +1179,9 @@ p.cantidad {
     display: inline;
 }
 
-.btn-agregar-carrito {
+.btn-bordo {
     background: #7D1D28;
+    border: none;
     color: #fff !important;
     padding: 8px 20px;
     margin: 10px 10px 10px 0px !important;
@@ -1190,18 +1191,7 @@ p.cantidad {
     font-size: 12px;
 }
 
-.btn-consultar {
-    background: #7D1D28;
-    color: #fff !important;
-    padding: 8px 20px;
-    margin: 10px 10px 10px 0px !important;
-    display: inline-block;
-    font-family: 'Roboto-Light';
-    text-transform: uppercase;
-    font-size: 12px;
-}
-
-.btn-agregar-carrito:hover, .btn-agregar-carrito:focus, .btn-consultar:hover, .btn-consultar:focus {
+.btn-bordo:hover, .btn-bordo:focus {
     background: #65101A;
 }
 
