--- a/css/estilos.css
+++ b/css/estilos.css
@@ -104,20 +104,20 @@ a:focus, a:hover {
 }
 
 .modal-header {
-    padding: 20px 15px 0px;
+    /* padding: 20px 15px 0px; */
     border-bottom: none;
     background: #7D1D28;
 }
     
 .modal-header .close {
-    margin-top: -35px;
+    /* margin-top: -35px; */
     color: #fff;
     opacity: 0.7;
 }
 
 .modal-title {
-    margin: 0;
-    line-height: normal;
+    margin-top: -20px;
+    /* line-height: normal; */
     font-family: 'BentonSans-Medium' !important;
     color: #fff;
     font-size: 17px;
@@ -126,11 +126,11 @@ a:focus, a:hover {
 }
 
 #login-modal .modal-header {
-    padding:0px;
+    padding:5px;
 }
 
 #login-modal .modal-title {
-    padding: 15px 15px 0px;
+    /* padding: 15px 15px 0px; */
     border-bottom: none;
     background: #7D1D28;
 
