--- a/css/estilos.css
+++ b/css/estilos.css
@@ -484,7 +484,7 @@ span#text-lost-msg {
 }
 
 .carousel-inner {
-    max-height: 400px;
+    max-height: 60vh;
 }
 
 .carousel-inner > .item > img {
