--- a/css/estilos.css
+++ b/css/estilos.css
@@ -516,8 +516,12 @@ span#text-lost-msg {
 
 .producto {
     background: #fff;
-    margin-top: 15px;
-    padding: 15px;
+    margin: 7.5px;
+    padding: 7.5px;
+    border: 1px solid lightgray;
+    -moz-box-shadow: 5px 5px 5px #b0b0b0;
+    -webkit-box-shadow: 5px 5px 5px #b0b0b0;
+    box-shadow: 5px 5px 5px #b0b0b0;
 }
 
 .acciones-producto {
