Cambios varios -Mejoras en notificaciones -Proceso manual de pagos -Registro de usuarios con activación por mail -Gráficos en administración

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1683,6 +1683,13 @@ footer .redes-sociales img {
 
 .ucase { text-transform: uppercase; }
 
+.gly-spin {
+    transform: scaleX(-1);
+    -moz-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    -ms-transform: scaleX(-1);
+}
+
 
 @media all and (max-width: 769px) {
     .mis-compras, .lista-precios {
