--- a/css/estilos.css
+++ b/css/estilos.css
@@ -487,7 +487,7 @@ span#text-lost-msg {
     max-height: 60vh;
 }
 
-.carousel-inner > .item > img {
+.carousel-inner > .item  img {
     width: 100%;
     max-width: unset !important;
 }
